--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Ventonix</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ventonix</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="assets/css/swiper-bundle.min.css"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
+  <script src="assets/js/swiper-bundle.min.js"></script>
+  <script src="assets/js/script.js"></script>
 </html>
