--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
   <body>
     <app-root></app-root>
   </body>
-  <script src="assets/js/swiper-bundle.min.js"></script>
-  <script src="assets/js/script.js"></script>
+  <!-- <script src="assets/js/swiper-bundle.min.js"></script> -->
+  <!-- <script src="assets/js/script.js"></script> -->
 </html>
